crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__clean_with_divergence.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: "status_line(&model, 0, 80)"
---
Line::from_iter([
    Span::from(" main · 1234567").fg(Color::Reset).bg(Color::Reset).not_dim(),
    Span::from(" · clean").fg(Color::Reset).bg(Color::Reset).dim(),
    Span::default(),
    Span::from("[ Commands (1 / F1) ]").fg(Color::Reset).bg(Color::Reset).bold().not_dim(),
    Span::from(" "),
    Span::from("[ Help (2 / F2) ]").fg(Color::Reset).bg(Color::Reset).bold().not_dim(),
    Span::from(" "),
    Span::from("[ Sync (9 / F9) ]").fg(Color::Reset).bg(Color::Reset).bold().not_dim(),
])
