crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__diff_file_icon_inherits_status_style_in_a_narrow_row.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 15, height: 4 },
    content: [
        "┌ Changes  St┐",
        "│M very-... │",
        "│             │",
        "└─────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 1, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 14, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
