crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__file_picker_renders_every_git_change_kind_with_its_status_color.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 10 },
    content: [
        "┌ Changes  Stage All ─────────────────┐",
        "│A file-0.rs                         │",
        "│M file-1.rs                         │",
        "│D file-2.rs                         │",
        "│R file-3.rs                         │",
        "│C file-4.rs                         │",
        "│A file-5.rs                         │",
        "│U file-6.rs                         │",
        "│                                      │",
        "└──────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Red, bg: Reset, underline: Reset, modifier: CROSSED_OUT,
        x: 38, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | CROSSED_OUT,
        x: 39, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Red, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 39, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
