crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__minimum_width.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: minimum
---
Line::from_iter([
    Span::default().white().bold(),
    Span::default(),
    Span::from("…").white().bold(),
])
