crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__rendered_footer_keeps_newline_errors_on_the_footer_row.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 12 },
    content: [
        "┌ Commit message ─┐┌ File Diff ────────────────────────────────── Inline ───  ┐",
        "│Type a message…   ││                                                          │",
        "└──────────────────┘│                                                          │",
        "     [ Commit ]     │                                                          │",
        "                    │                                                          │",
        "                    │                                                          │",
        "┌ Staged  Unstage ┐│                                                          │",
        "│No files.         ││                                                          │",
        "└──────────────────┘│                                                          │",
        "┌ Changes  Stage A┐│                                                          │",
        "└──────────────────┘└──────────────────────────────────────────────────────────┘",
        " branch main · 1234567  Fetch failed␊SSH host is unknown                        ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 0, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 6, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 19, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 10, y: 9, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 11, fg: White, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 11, fg: LightRed, bg: Reset, underline: Reset, modifier: NONE,
        x: 56, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
