crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__staged_changes.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: "status_line(&model, 0, 80)"
---
Line::from_iter([
    Span::from(" branch main · 1234567").white().bold(),
    Span::from(" [ Sync (9 / F9) ]").white().on_dark_gray().bold(),
    Span::from(" · staged").light_green().bold(),
    Span::from("    "),
    Span::from("1/f1: commands  2/f2: help "),
])
