crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__status_line_keeps_the_head_visible_with_transient_errors.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: line
---
Line::from_iter([
    Span::from(" branch m…").white().bold(),
    Span::from(" [ Sync (9 / F9) ]").white().on_dark_gray().bold(),
    Span::from("  "),
    Span::from("Checkout …").light_red(),
])
