crates/diffo-app/src/diff/snapshots/diffo_app__diff__rendering_tests__status_line_makes_error_control_characters_inert.snap
---
source: crates/diffo-app/src/diff/rendering_tests.rs
expression: line
---
Line::from_iter([
    Span::from(" branch main · 1234567").white().bold(),
    Span::from("  "),
    Span::from("Sync failed␊continue?␍␛[2J    ␈").light_red(),
])
